[package]
name = "mkisofs-rs"
version = "0.1.1"
edition = "2018"
description = "A partial reimplementation of mkisofs to create hybrid ISO-9660 filesystem-image"
authors = ["Thog <me@thog.eu>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/Thog/mkisofs-rs"
repository = "https://github.com/Thog/mkisofs-rs"
keywords = ["iso9660", "mkisofs"]
categories = ["development-tools", "command-line-utilities", "filesystem"]

[dependencies]
byteorder = "1"
chrono = "0.4"
structopt = "0.2"
